fixed overlap

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -19,7 +19,7 @@
     @include tab {
       display: block;
       width: 100%;
-      margin: 10% 0;
+      margin: 20% 0 5%;
     }
 
     h1 {
