--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ footer .icons img {
   .main__item {
     display: block;
     width: 100%;
-    margin: 10% 0;
+    margin: 20% 0 5%;
   }
 }
 
